--- a/paper/src/main/resources/messages/english.yml
+++ b/paper/src/main/resources/messages/english.yml
@@ -2,10 +2,10 @@ config-version: "23"
 
 messages:
   prefix: '<gradient:#2E8B57:#48D1CC>[CustomNameplates] </gradient>'
-  reload: '<white>Reloaded! Don''t forget to reinstall your resource pack.</white>'
+  reload: '<white>Reloaded! </white>'
   cooldown: '<white>Previewing is still Ongoing!</white>'
-  generate: '<white>Resource Pack is generating..</white>'
-  generate-done: '<white>Resource Pack has been generated!</white>'
+  generate: '<white>Resource Pack is generating...</white>'
+  generate-done: '<white>Resource Pack has been generated! Don''t forget to reinstall your resource pack.</white>'
   no-nameplate: 'No Nameplate'
   preview: '<white>Now previewing your nameplate (go to third person to view)!</white>'
 
@@ -17,6 +17,7 @@ messages:
   not-available-nameplates: '<white>This nameplate is currently not available!</white>'
   available-nameplates: '<white>Available nameplates: {Nameplates}.</white>'
   have-no-nameplates: '<white>You don''t have any nameplate yet'
+  force-preview: '<white>Forced {Player} to preview the nameplate</white>'
 
   equip-bubbles: '<white>Successfully equipped chatting bubbles {Bubble}</white>'
   force-equip-bubbles: '<white>Successfully equipped chatting bubbles {Bubbles}</white>'
