--- a/paper/src/main/resources/configs/font-width-data.yml
+++ b/paper/src/main/resources/configs/font-width-data.yml
@@ -16,7 +16,7 @@ minecraft:uniform:
 
 minecraft:alt:
   default: 8
-  template:
+  template-loading-sequence:
     - ascii_sga
 
 minecraft:asciillager:
