--- a/paper/src/main/resources/configs/bossbar.yml
+++ b/paper/src/main/resources/configs/bossbar.yml
@@ -12,19 +12,19 @@ bossbar_1:
   text-display-order:
     1:
       # Measured in ticks
-      duration: 200
+      duration: 100
       # Text content
-      text: 'Welcome to my server! %player_name%'
+      text: '%nameplates_background_hello%'
       # The frequency of refreshing the text, the lower the value is, the faster the placeholders are updated
       # measured in ticks, -1 = disable refreshing
       refresh-frequency: -1
     2:
-      duration: 100
-      text: 'Your location: [X: %player_x%, Y: %player_y%, Z: %player_z%]'
+      duration: 200
+      text: '%nameplates_background_time%  %nameplates_background_location%  %nameplates_background_weather%'
       refresh-frequency: 1
     3:
       duration: 100
-      text: 'This is a message only visible to admins'
+      text: '%nameplates_background_update%'
       refresh-frequency: -1
       # Optional
       # When enabling conditions, make sure that players would see at least one in the order,
@@ -32,3 +32,6 @@ bossbar_1:
       conditions:
         # If your player doesn't meet the conditions, it would be skipped
         permission: nameplates.admin
+        equals:
+          value1: '%nameplates_is-latest%'
+          value2: 'false'
