--- a/paper/src/main/resources/configs/bubble.yml
+++ b/paper/src/main/resources/configs/bubble.yml
@@ -4,7 +4,7 @@ blacklist-channels:
   - Staff
 
 # Default bubble to display if player's bubble is "none"
-default-bubbles: 'chat'
+default-bubble: 'chat'
 
 # Text format when bubble is "none"
 default-format:
