--- a/paper/src/main/resources/configs/custom-placeholders.yml
+++ b/paper/src/main/resources/configs/custom-placeholders.yml
@@ -1,5 +1,9 @@
 conditional-text:
   actionbar:
+    priority_0:
+      text: '%nameplates_background_other_actionbar%'
+      conditions:
+        '!gamemode': survival
     priority_1:
       text: '%nameplates_background_other_actionbar%'
       conditions:
