--- a/paper/src/main/resources/configs/nameplate.yml
+++ b/paper/src/main/resources/configs/nameplate.yml
@@ -29,7 +29,7 @@ unlimited:
     text: '%nameplates_nametag%'
     vertical-offset: -1
     owner-conditions:
-      potion-effect: "INVISIBILITY==0"
+      potion-effect: "INVISIBILITY<0"
     viewer-conditions: { }
   tag_2:
     text: "IP: %player_ip%  My IP: %viewer_player_ip%"
@@ -37,7 +37,7 @@ unlimited:
     refresh-frequency: 10
     check-frequency: 20
     owner-conditions:
-      potion-effect: "INVISIBILITY==0"
+      potion-effect: "INVISIBILITY<0"
     viewer-conditions:
       condition_1:
         type: permission
