--- a/paper/src/main/resources/configs/actionbar.yml
+++ b/paper/src/main/resources/configs/actionbar.yml
@@ -1,5 +1,6 @@
 # Player can only receive at most 1 actionbar at the same time
 actionbar:
+  # The frequency of checking conditions for a bar, measured in ticks
   check-frequency: 10
   conditions:
     permission: "actionbar.show"
@@ -12,3 +13,9 @@ actionbar:
       # The frequency of refreshing the text, the lower the value is, the faster the placeholders are updated
       # measured in ticks, -1 = disable refreshing
       refresh-frequency: 1
+      # Optional
+      # When enabling conditions, make sure that players would see at least one in the order,
+      # otherwise it will fall into a dead cycle
+      # If your player doesn't meet the conditions, it would be skipped
+      # This condition would only be checked once until the next turn
+      conditions: {}
