--- a/paper/src/main/resources/config.yml
+++ b/paper/src/main/resources/config.yml
@@ -1,5 +1,5 @@
 # Do not change
-config-version: '24'
+config-version: '25'
 
 # Debug mode
 debug: false
@@ -28,6 +28,7 @@ modules:
 integrations:
   resource-pack:
     ItemsAdder: false
+    ItemsAdder-old-method: false
     Oraxen: false
   team:
     unknown: false
@@ -58,6 +59,8 @@ resource-pack:
     space-split: 'font\base\'
 
   shader:
+    # Enable shaders
+    enable: true
     # Hide scoreboard numbers
     hide-scoreboard-number: false
     # Add Animated text support
@@ -100,7 +103,8 @@ other-settings:
 
   # delay x ticks before actionbar/bossbar is sent to players
   send-delay: 0
-  # Set the size for the cache system. This is useful and would bring huge performance if you keep it to a reasonable value
+
+  # Set the size for the cache system. This is useful and would bring huge performance improvement if you keep it to a reasonable value
   # Many developers don't seem to think that parsing text labels would incur significant performance overhead but actually it does through it's running asynchronously.
   # With cache system, you can save much CPU resource when the same message is displayed to many players.
   # The more people on your server, the higher the efficiency of the caching system's operation.
