--- a/paper/src/main/resources/configs/font-width-data.yml
+++ b/paper/src/main/resources/configs/font-width-data.yml
@@ -23,3 +23,13 @@ minecraft:asciillager:
   default: 8
   template-loading-sequence:
     - asciillager
+
+customcrops:default:
+  default: 8
+  template-loading-sequence: []
+  values:
+    뀁: -2
+    뀂: 4
+    뀃: 6
+    뀄: 6
+    뀅: 4
