--- a/paper/src/main/resources/messages/french.yml
+++ b/paper/src/main/resources/messages/french.yml
@@ -15,7 +15,7 @@ messages:
   force-unequip-nameplates: '<white>La plaque de nom de {Player} a été retirée avec succès !</white>'
   not-exist-nameplates: '<white>Cette plaque de nom n'existe pas !</white>'
   not-available-nameplates: '<white>Cette plaque de nom n'est actuellement pas disponible !</white>'
-  available-nameplates: '<white>Plaques de nom disponibles : {Nameplates}.</white>'
+  available-nameplates: '<white>Plaques de nom disponibles : {Nameplate}.</white>'
   have-no-nameplates: '<white>Vous n'avez pas encore de plaque de nom</white>'
   force-preview: '<white>Forced {Player} to preview the nameplate</white>'
 
