--- a/paper/src/main/resources/configs/bubble.yml
+++ b/paper/src/main/resources/configs/bubble.yml
@@ -1,3 +1,10 @@
+# Requirements for sending the bubble
+requirements:
+  permission: bubbles.use
+  self-disguised: false
+  '!gamemode': spectator
+  potion-effect: "INVISIBILITY<0"
+
 # blacklist channels
 blacklist-channels:
   - Private
